--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -301,7 +301,7 @@ body:not(.smart) #elenchi{
 }
 #chiudiElenco{
 	width: 25px;
-    height: 25px;
+    height: 31px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -309,7 +309,8 @@ body:not(.smart) #elenchi{
     float: right;
     margin-right: -25px;
     background-color: var(--impostazioni-fondino);
-    border-bottom-right-radius: 8px;
+    border-radius: 0px 5px 5px 0px;
+	margin-top:1px;
 }
 .schLato #chiudiElenco{
     height: 200px;
@@ -323,6 +324,10 @@ body:not(.smart) #elenchi{
     margin-top: -100px;
 	background-color:var(--colore-grigio-scuro);
     background-image: url(../img/frSx.png) !important;
+}
+body.bodyStyled0 .schLato #chiudiElenco{
+	background-color:var(--colore-beige);
+    background-image: url(../img/frSxB.png) !important;
 }
 /*body.bodyStyled2 .schLato #chiudiElenco{
     background-image: url(../img/frSx.png) !important;
