--- a/css/menu.css
+++ b/css/menu.css
@@ -1372,6 +1372,17 @@ body:not(.bodyStyled2) #btn_modut{
 	background-color:rgba(255,255,255,0.1);
 }
 
+#p_features{
+	background-image:url(../img/ico_guidaN.png),url(../img/frDxB.png);
+	cursor:pointer;
+}
+.bodyStyled2 #p_features{
+	background-image:url(../img/ico_guida.png),url(../img/frDx.png);
+}
+#p_features:hover{
+	background-color:rgba(255,255,255,0.1);
+}
+
 #p_colori{
 	background-image:url(../img/ico_coloriN.png),url(../img/frDxB.png);
 	cursor:pointer;
