--- a/css/popup_dispositivi.css
+++ b/css/popup_dispositivi.css
@@ -50,3 +50,7 @@
     margin-bottom: -5px;
     margin-top: -5px;
 }
+#dispositivi_descr{
+    padding: 18px;
+    border-bottom: 1px solid rgba(0,0,0,0.2);	
+}
