--- a/css/popup_features.css
+++ b/css/popup_features.css
@@ -48,6 +48,9 @@
 	height:28px;
 	line-height:28px;
 	border-top:1px solid rgba(0,0,0,0.1);
+	opacity: 1;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 0px 0px 5px 5px;
 }
 
 #contFeatures{
