--- a/css/schede.css
+++ b/css/schede.css
@@ -166,7 +166,7 @@ body:not(.touch) .schLato #ss{
 	text-align: center !important;
     border-top: 1px solid rgba(0,0,0,0.2);
 }
-.touch #btnsFixScheda{
+.smart #btnsFixScheda{
 	display:none !important;
 }
 #btnsFixScheda span{
@@ -292,8 +292,14 @@ body:not(.smart) #scheda.minimized #xp{
     border-radius: 0px 5px 5px 0px;
     background-color: rgba(0,0,0,0.5);
 }
+body:not(.bodyStyled2) #scheda.schLato #sc{
+    background-color: rgba(255,255,255,0.5);
+}
 #scheda.schLato #sc:hover{
     background-color: rgba(0,0,0,0.8) !important;
+}
+body:not(.bodyStyled2) #scheda.schLato #sc:hover{
+    background-color: rgba(255,255,255,0.8) !important;
 }
 
 #scheda:not(.minimized) #xp{
