Inserito pulsante elimina ciclo dalla cartella e modificata la label - Sistemato problema di stampa su Mac Chrome (ma non su Safari che a quanto pare non ha una soluzione)

--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -94,7 +94,7 @@
 	color:#000;
 }
 
-html/*, body */{
+html:not(.htmlStampa)/*, body */{
 	overflow: hidden !important;
     position: fixed;
     width: 100%;
